site: add an ecosystem page
I mostly pasted blurbs I found on each components' websites.

A staged version can be seen here:
https://github.com/andrwng/kudu/blob/ecosystem/ecosystem.md

Change-Id: Ib22d09afdf3ae8240f1ff64c7121b5216f6b3345

--- a/_includes/top_common.html
+++ b/_includes/top_common.html
@@ -78,6 +78,7 @@
                     <li role="separator" class="divider"></li>
                     <li><a href="{{site.github.url}}/community.html#meetups-user-groups-and-conference-presentations">Events and Meetups</a></li>
                     <li><a href="{{site.github.url}}/committers.html">Project Committers</a></li>
+                    <li><a href="{{site.github.url}}/ecosystem.html">Ecosystem</a></li>
                     <!--<li><a href="{{site.github.url}}/roadmap.html">Roadmap</a></li>-->
                     <li><a href="{{site.github.url}}/community.html#contributions">How to Contribute</a></li>
                     <li role="separator" class="divider"></li>
